<resources>
    <string name="app_name">TaskManager</string>
    <string name="name_start_fragment">Name</string>
    <string name="start">Start</string>
    <string name="title_activity_task">TaskActivity</string>
    <string name="number_of_tasks">Number Of Tasks</string>
    <string name="taskcheck">TaskCheck</string>
    <string name="task_manager_title">Task Manager</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_task">There is no Task With This Status</string>
    <string name="empty_number_test_box">Enter a Number</string>
    <string name="title_text">Title</string>
    <string name="description_text">Description</string>
    <string name="doing_text">Doing</string>
    <string name="todo_text">ToDo</string>
    <string name="text">Done</string>
    <string name="save_button">Save</string>
    <string name="date_picker_title">Pick your Date</string>
    <string name="create_task">"Creating New Dialog"</string>
    <string name="delete_button">Delete</string>
    <string name="edit_button">Edit</string>
    <string name="date_text">Date</string>
    <string name="task_icon">Task Icon</string>
    <string name="signup_text">Sign Up</string>
    <string name="password_hint">Password</string>
    <string name="username_hint">User Name</string>
    <string name="login_text">Log In</string>
    <string name="login_message">Log In SuccessFul</string>
    <string name="login_failed_message">There is No Account with this values available</string>
    <string name="user_name_exists">This User Name Already Exists</string>
    <string name="search_model">Search Model</string>
    <string name="by_time_search_model">By Time</string>
    <string name="by_date_serach_model">By Date</string>
    <string name="by_description_serach_model">By Description</string>
    <string name="by_name_serach_model">By Name</string>
    <string name="time_button">time</string>
    <string name="share">Share</string>
    <string name="sign_up_date">Sign Up Date</string>
    <string-array name="states">
        <item>ToDo</item>
        <item>Doing</item>
        <item>Done</item>
    </string-array>
    <string name="task_count">Number of Tasks: %d$ </string>
    <string name="from_gallery">From Gallery</string>
    <string name="capture">Capture</string>
    <string name="task_image">Task Image</string>
</resources>