<?xml version="1.0" encoding="UTF-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".control.fragment.StartManagerFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <ImageView
            android:id="@+id/check_box"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginStart="130dp"
            android:layout_marginEnd="131dp"
            android:layout_marginBottom="32dp"
            android:contentDescription="@string/taskcheck"
            android:src="@android:drawable/checkbox_on_background"
            app:layout_constraintBottom_toTopOf="@+id/PersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/task_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/task_manager_title"
            app:layout_constraintBottom_toTopOf="@+id/PersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/check_box"
            app:layout_constraintVertical_bias="0.0" />

        <EditText
            android:id="@+id/numberOfTasks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:autofillHints="Number Of Tasks"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/number_of_tasks"
            android:inputType="number"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/PersonName"
            tools:text="Number Of Tasks" />

        <Button
            android:id="@+id/startTaskManagmentButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:text="@string/start"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/numberOfTasks" />

        <EditText
            android:id="@+id/PersonName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:autofillHints="@string/name_start_fragment"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/name_start_fragment"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toTopOf="@id/numberOfTasks"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/task_title"
            app:layout_constraintTop_toTopOf="@id/task_title" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>